Add CoreProtect rollback workflow with guarded voting